base for swagger extraction

--- a/Tests/fixtures/app/config/config.yml
+++ b/Tests/fixtures/app/config/config.yml
@@ -7,3 +7,6 @@ framework:
     resource: "%kernel.root_dir%/config/routing.yml"
   test: ~
   session: ~
+  validation: { enable_annotations: true }
+  templating:
+    engines: ['twig']
