redirect on swagger if route is not json

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 draw.swagger_api_doc:
-    path: /api-doc
-    defaults: { _controller: DrawSwaggerBundle:Swagger:apiDoc }
+    path: /api-doc.{_format}
+    defaults: { _controller: DrawSwaggerBundle:Swagger:apiDoc, _format: html }
