fix dependency to be a bit more self sufficient

--- a/Tests/fixtures/app/config/config.yml
+++ b/Tests/fixtures/app/config/config.yml
@@ -10,3 +10,7 @@ framework:
   validation: { enable_annotations: true }
   templating:
     engines: ['twig']
+
+fos_rest:
+    body_converter:
+        enabled: true
