--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         "symfony/framework-bundle": "~2.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.1.*",
-        "symfony/symfony": "~2.3",
+        "phpunit/phpunit": "4.1.*|^6.0",
+        "symfony/symfony": "~2.3|^3.2",
         "polishsymfonycommunity/symfony-mocker-container": "~1.0",
         "jms/serializer-bundle": "@stable",
         "friendsofsymfony/rest-bundle": "1.4.*",
