--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.4",
         "draw/swagger": "dev-master",
         "draw/draw-bundle": "dev-master",
-        "symfony/framework-bundle": "~2.3"
+        "symfony/framework-bundle": "~2.3|^3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*|^6.0",
