--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
         }
     },
     "require": {
-        "php": ">=5.4",
+        "php": "^7.0",
         "draw/swagger": "dev-master",
         "draw/draw-bundle": "dev-master",
-        "symfony/framework-bundle": "~2.3|^3.2"
+        "symfony/framework-bundle": "~2.3|^3.2",
+        "phpdocumentor/reflection-docblock": "^4.0",
+        "doctrine/orm": "^2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "4.1.*|^6.0",
